# petnet-feeder-service

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  LICENSE  Makefile  Pipfile  README.md  actions.txt  alembic.ini  all_commands.txt  config.ini  config.py  devices.json  devices.py  devices.txt  find_commands.py  petnet.txt  pyproject.toml  request.py  requirements.txt  run.sh  setup.py  tox.ini
.github/: dependabot.yml
.github/actions/: ci.yml
.github/workflows/: backend.yml  ci.yml  codeql-analysis.yml  combine-prs.yml  lint_and_test.yml
api/: app.py
conf/: mitmproxy-ca-cert.cer  mitmproxy-ca-cert.p12  mitmproxy-ca.p12  mitmproxy-ca.pem
feeder/: __init__.py  __main__.py  config.py  config.yml  main.py  mqttclient.py  mqttserver.py  responderapp.py  task_logger.py
feeder/api/models/: __init__.py  feeder.py  kronos.py  pet.py
feeder/api/routers/: feeder.py  kronos.py  pet.py
feeder/database/: models.py  session.py
feeder/database/alembic/: env.py
feeder/templates/: welcome.html
feeder/util/: __init__.py  feeder.py  mkcert.py
feeder/util/mqtt/: __init__.py  authentication.py  broker.py  client.py  topic.py
feeder_api/: README.md  api.js  app.py  curl.txt  main.py  mkcert.py  mqttclient.py  package-lock.json  package.json  responder.yml  responderapp.py
feeder_api/templates/: fed.html  welcome.html
installation-guides/: centos8_install_guide.txt
mobile_api/: traffic.txt
raspberry_mitm/: README.md  etc-dhcpd.conf  etc-hostapd.conf  iptables.sh  mitmweb.service  start_mitm.sh
sample/: docker-compose.yaml  nginx.conf
static/: package-lock.json  package.json
static/public/: index.html  manifest.json
static/src/: App.js  index.js  store.js
static/src/actions/: createPet.js  createPetSchedule.js  deleteFeeder.js  deletePet.js  deletePetSchedule.js  editFeederModal.js  editPetModal.js  getFeedHistory.js  getFeederDevices.js  getFeederTelemetry.js  getHopperLevel.js  getPetSchedule.js  getPets.js  getRecipe.js  modifyFeeder.js  modifyPet.js  newFeederWizard.js  restartFeeder.js  scheduleModal.js  setHopperLevel.js  setRecipe.js  snackModal.js  toast.js  triggerFeeding.js  updatePetSchedule.js
static/src/components/: CreatePetForm.js  EditFeederModal.js  EditPetModal.js  Error.js  FeedHistoryTable.js  FeederCard.js  FoodVolumeSlider.js  FoodWeightBubble.js  HopperLevelForm.js  HopperLevelIndicator.js  NewFeederCard.js  PetAvatar.js  PetCard.js  ScheduleModal.js  SnackModal.js
static/src/constants/: feeder.js  index.js  pet.js
static/src/containers/: CreatePetFormContainer.js  EditFeederModalContainer.js  EditPetModalContainer.js  FeedHistoryTableContainer.js  FeederCardContainer.js  FeederCardListContainer.js  HopperLevelContainer.js  NewFeederWizard.js  PetCardContainer.js  PetCardListContainer.js  ScheduleModalContainer.js  SnackModalContainer.js
static/src/reducers/: createPet.js  deleteFeeder.js  deletePet.js  editFeederModal.js  editPetModal.js  getFeedHistory.js  getFeederDevices.js  getFeederTelemetry.js  getHopperLevel.js  getPetSchedule.js  getPets.js  getRecipe.js  index.js  modifyFeeder.js  modifyPet.js  newFeederWizard.js  restartFeeder.js  (+5 more)
tests/: certificates.py  conftest.py  test_database_models.py  test_kronos_api.py
tests/test_routes/: test_feeder.py  test_kronos.py  test_pet.py
tests/test_utils/: test_feeder.py  test_main.py  test_mqtt_broker.py  test_mqtt_client.py  test_mqtt_plugins.py
(+22 files in other folders)
