[tool.poetry]
name = "feedernet"
version = "1.0.0"
description = "Breathing new life into your defunk PetNet feeders."
authors = [
    "Marc Billow <mbillow@users.noreply.github.com>",
    "Kenny Root <kruton@users.noreply.github.com>",
    "Ted Timmons <tedder@users.noreply.github.com>"
]
license = "MIT"
packages = [
    {include = "feeder"},
]
exclude = ["tests/**/*"]
readme = "README.md"
homepage = "http://feedernet.pet"
repository = "https://github.com/feedernet/petnet-feeder-service"
documentation = "https://github.com/feedernet/petnet-feeder-service/wiki"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Intended Audience :: End Users/Desktop"
]

[tool.poetry.dependencies]
python = "^3.8"
alembic = "^1.7.5"
aiosqlite = "^0.16.1"
databases = "^0.4.3"
fastapi = "^0.63.0"
hbmqtt = { git = "https://github.com/feedernet/hbmqtt.git" }
pytz = "^2020.5"
semver = "^2.13.0"
sqlalchemy = "^1.3.24"
uvicorn = "^0.13.3"
aiofiles = "^0.8.0"
Jinja2 = "^2.11.3"
cryptography = "3.3.2"
websockets = "8.1"

[tool.poetry.dev-dependencies]
black = {version = "21.12b0", allow-prereleases = true}
pytest = "^6.2.1"
pytest-asyncio = "^0.17.2"
tox = "^3.24.5"
pytest-cov = "^2.11.1"
pytest-mock = "^3.5.1"
requests = "^2.25.1"
flake8 = "^4.0.1"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.plugins."hbmqtt.broker.plugins"]
auth_petnet = "feeder.util.mqtt.authentication:PetnetAuthPlugin"
topic_petnet = "feeder.util.mqtt.topic:PetnetTopicPlugin"
