[tool.poetry]
name = "feedernet"
version = "1.0.0"
description = "Breathing new life into your defunk PetNet feeders."
authors = [
    "Marc Billow <mbillow@users.noreply.github.com>",
    "Kenny Root <kruton@users.noreply.github.com>",
    "Ted Timmons <tedder@users.noreply.github.com>"
]
license = "MIT"
packages = [
    {include = "feeder"},
]
exclude = ["tests/**/*"]
readme = "README.md"
homepage = "http://feedernet.pet"
repository = "https://github.com/feedernet/petnet-feeder-service"
documentation = "https://github.com/feedernet/petnet-feeder-service/wiki"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Intended Audience :: End Users/Desktop"
]

[tool.poetry.dependencies]
python = "^3.8"
alembic = "^1.7.6"
aiosqlite = "^0.17.0"
databases = "^0.4.3"
fastapi = "^0.74.1"
amqtt = { git = "https://github.com/feedernet/amqtt.git", rev = "f9e72c9e5b503ba385b9dd16d3e35b49662549df" }
pytz = "^2021.3"
semver = "^2.13.0"
sqlalchemy = "^1.3.24"
uvicorn = "^0.17.5"
aiofiles = "^0.8.0"
Jinja2 = "^3.0.3"
cryptography = "37.0.1"

[tool.poetry.dev-dependencies]
black = {version = "22.3.0", allow-prereleases = true}
pytest = "^7.0.1"
pytest-asyncio = "^0.18.1"
tox = "^3.24.5"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"
requests = "^2.25.1"
flake8 = "^4.0.1"
pylint = "^2.6.0"
pytest-xdist = "^2.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.plugins."amqtt.broker.plugins"]
auth_petnet = "feeder.util.mqtt.authentication:PetnetAuthPlugin"
topic_petnet = "feeder.util.mqtt.topic:PetnetTopicPlugin"
